# MCP_neo4j_orangpi

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
deploy/: README.md  mcp-server.service
docs/specs/: 01_foundation.md  02_domain_ports.md  03_infrastructure.md  04_application.md  05_cli_entrypoint.md  06_knowledge_evolution_vision.md
scripts/: ensure_indexes.py  run_indexer.py  setup_env.py  validate_architecture.py
src/book_graph_rag/: config.py  main.py  mcp_server_main.py
src/book_graph_rag/application/: index_book_use_case.py  query_knowledge_graph_use_case.py
src/book_graph_rag/domain/: models.py
src/book_graph_rag/infrastructure/: llm_adapter.py  neo4j_adapter.py  neo4j_command_adapter.py  neo4j_query_adapter.py  pdf_adapter.py
src/book_graph_rag/infrastructure/logging/: json_query_logger_adapter.py
src/book_graph_rag/infrastructure/mcp/: mcp_server_adapter.py
src/book_graph_rag/ports/: __init__.py  graph_db_port.py  graph_query_port.py  llm_port.py  pdf_port.py  query_logger_port.py
tests/: __init__.py  test_cli_main.py  test_config.py  test_deploy_artifacts.py  test_domain.py  test_graph_query_port.py  test_index_book_use_case.py  test_json_query_logger_adapter.py  test_llm_adapter.py  test_mcp_script_entry.py  test_mcp_server_adapter.py  test_mcp_server_main.py  test_neo4j_adapter.py  test_neo4j_command_adapter.py  test_neo4j_query_adapter.py  test_pdf_adapter.py  test_ports.py  test_query_cli.py  test_query_logger_port.py  test_query_models.py  test_query_use_case.py
