[project]
name = "book-graph-rag"
version = "0.1.0"
description = "Knowledge-graph RAG indexer for 'Agentic Architectural Patterns for Building Multi-Agent Systems'"
requires-python = ">=3.12"
authors = [{ name = "agentic-book-graph" }]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "instructor>=1.4",
    "neo4j>=5.23",
    "pymupdf>=1.24",
    "tenacity>=8.5",
    "click>=8.1",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",  # 🔧 añadido: casos de uso async requieren plugin asyncio
    "pre-commit>=3.8",
]

[project.scripts]
book-graph-rag = "book_graph_rag.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_graph_rag"]

# ── Ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "RET", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["book_graph_rag"]  # separa imports internos de terceros

[tool.ruff.lint.per-file-ignores]
# scripts/ NO es un paquete importable — son ejecutables CLI.
# INP001 (implicit namespace package) y T201 (print) son ruido aquí.
"scripts/*" = ["INP001", "T201"]

# ── Mypy (estricto) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true  # Any que escapa de libs sin stubs → flagged
warn_unused_ignores = true      # 🔧 redundante con strict, pero explicit-doc-of-intent
mypy_path = ["src"]             # src layout: mypy encuentra el paquete aquí
packages = ["book_graph_rag"]
ignore_missing_imports = true

# Relajación selectiva: libs que NO envían stubs ni py.typed serían fuente
# inagotable de errores disallow_any_unimported. El override aplicales el
# flag solo a ellas. NUESTRO código (book_graph_rag) queda sujeto al flag.
# Si una de estas libs empieza a publicar stubs py.typed, SACARLA de acá.
[[tool.mypy.overrides]]
module = ["neo4j.*", "fitz.*", "instructor.*", "openai.*"]
disallow_any_unimported = false

# ── Pytest ───────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

# ── Uv ──────────────────────────────────────────────────────────────────
[tool.uv]
package = true